--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ select{
     font-size: .25em;
     font-weight: bold;
     margin: 8px 0;
+    min-height: fit-content;
     padding: 12px 20px;
     text-align: center;
     width: 100%;
@@ -66,3 +67,52 @@ select{
     font-weight: bold;
     width: 100%;
   }
+
+  .hamburger {
+    position: fixed;
+    z-index: 100;
+    top: 1rem;
+    left: 50%;
+    transform: translateX(-50%);
+    cursor: pointer;
+  }
+
+  .closeIcon {
+    display: none;
+  }
+
+  .menu {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    position: fixed;
+    transform: translateY(-100%);
+    transition: transform 0.5s;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 99;
+    background: black;
+    list-style: none;
+  }
+
+  .menu a{
+    color: white;
+    font-size: 4em;
+    font-family: "Graffiti";
+    text-decoration: none;
+  }
+
+  .showMenu {
+    transform: translateY(0);
+  }
+
+  .menuIcon{
+    display: flex;
+  }
+
+nav{
+min-height: fit-content;
+}
