--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 html {
     background-image: url("./images/wall.jpg");
     background-repeat: no-repeat;
-
+    color: white;
 }
 
 body{
@@ -14,7 +14,7 @@ body{
     flex-direction: column;
 }
 
-.bookPicker{
+.book-picker{
     align-self: center;
     align-items: center;
     display: flex;
@@ -23,6 +23,26 @@ body{
     height: 90vh;
     justify-content: space-around;
     width: 80vw;
+}
+
+button{
+  background: linear-gradient(#441b1b, #66292a);
+  border: 2px solid black;
+  color: white;
+  cursor: pointer;
+  font-size: .25em;
+  font-weight: bold;
+  width: 100%;
+}
+
+button:hover{
+  background: white;
+  border: 2px solid #441b1b;
+  color: #441b1b;
+  cursor: pointer;
+  font-size: .25em;
+  font-weight: bold;
+  width: 100%;
 }
 
 .choices{
@@ -45,26 +65,6 @@ select{
     min-height: fit-content;
     padding: 12px 20px;
     text-align: center;
-    width: 100%;
-  }
-
-  button{
-    background: linear-gradient(#441b1b, #66292a);
-    border: 2px solid black;
-    color: white;
-    cursor: pointer;
-    font-size: .25em;
-    font-weight: bold;
-    width: 100%;
-  }
-
-  button:hover{
-    background: white;
-    border: 2px solid #441b1b;
-    color: #441b1b;
-    cursor: pointer;
-    font-size: .25em;
-    font-weight: bold;
     width: 100%;
   }
 
@@ -107,57 +107,57 @@ select{
 /* Hamburger Menu */
 
 .menu-button{
+  align-items: center;
   cursor: pointer;
-position: relative;
-display: flex;
-flex-shrink: 1;
-justify-content: center;
-align-items: center;
-width: 50px;
-height: 55px;
-left: 50%;
-top: 0;
-transform: translateX(-50%);
-transition: all .5s ease-in-out;
-z-index: 100;
+  display: flex;
+  flex-shrink: 1;
+  height: 55px;
+  justify-content: center;
+  left: 50%;
+  position: relative;
+  top: 0;
+  transform: translateX(-50%);
+  transition: all .5s ease-in-out;
+  width: 50px;
+  z-index: 100;
 }
 
 .menu-button-burger{
-width: 50px;
-height: 6px;
-background: #fff;
-border-radius: 5px;
-box-shadow: 0 2px 5px rgba(255,101,47,.2);
-transition: all .5s ease-in-out;
-z-index: 100;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(255,101,47,.2);
+  height: 6px;
+  transition: all .5s ease-in-out;
+  width: 50px;
+  z-index: 100;
 }
 
 .menu-button-burger::before, 
 .menu-button-burger::after {
-content: '';
-position: absolute;
-width: 50px;
-height: 6px;
-background: #fff;
-border-radius: 5px;
-box-shadow: 0 2px 5px rgba(255,101,47,.2);
-transition: all .5s ease-in-out;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(255,101,47,.2);
+  content: '';
+  height: 6px;
+  position: absolute;
+  transition: all .5s ease-in-out;
+  width: 50px;
 }
 
 .menu-button-burger::before{
-transform: translateY(-16px);
+  transform: translateY(-16px);
 }
 
 .menu-button-burger::after{
-transform: translateY(16px);
+  transform: translateY(16px);
 }
 
 /* Animation */
 
 .menu-button.open .menu-button-burger{
-  transform: translateX(-50px);
   background: transparent;
   box-shadow: none;
+  transform: translateX(-50px);
 }
 
 .menu-button.open .menu-button-burger::before {
