Began revising for mobile. Added viewport metadata so site displays properly on mobile. Added media queries to make changes to menu and slideshow display on mobile devices. (outsite of project code. Set up digital ocean ubuntu droplet with apache server. Began prepping server to act as a host for this project. Next Steps: Finish Media queries so slideshow displays properly on mobile and upload final product to server.

--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ select{
   background-color: rgba(8, 8, 8, 0.11);
   display: grid;
   grid-template-columns: 0.5fr 1fr 0.5fr;
-  grid-template-rows: 1fr;
+  grid-template-rows: 1fr .2fr;
   height: 90vh;
   right: 0;
   left: 0;
@@ -217,6 +217,7 @@ select{
   display: none;
   justify-items: right;
   opacity: 70%;
+  grid-row: 0.95fr 0.05fr;
 }
 
 .slider-right {
@@ -327,4 +328,22 @@ select{
   width: 25px;
 }
 
+  /* Adjustment of menu and slideshow display on mobile*/
 
+  @media screen and (min-width: 980px) /* Desktop */ {
+
+  }
+
+  @media screen  and (max-width: 979px) /* Tablet */ {
+  .menu a{
+    font-size: 8vw;
+  }
+  }
+
+  @media screen and (max-width: 500px) /* Mobile */ {
+
+  .menu a{
+    font-size: 8vw;
+  }
+
+  }
